--- a/templates/insights.html
+++ b/templates/insights.html
@@ -3,7 +3,9 @@
 {% block content %}
 <header>
     <h2>Insights</h2>
-    <button id="uploadDataButton">Upload Data</button>
+    <a href="/upload">
+        <button id="uploadDataButton">Upload Data</button>
+    </a>
     <div id="profilePicture"></div>
 </header>
 <div id="insightsSection">
