Updated templates and added menu button

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,24 @@
     </aside>
     
     <section id="content">
+        <header>
+            <div>
+                <h2 style="margin: 0;">{{section}}</h2>
+            </div>
+            <div class="container">
+                <a href="/upload">
+                    <button id="uploadDataButton">Upload Data</button>
+                </a>
+                <div id="profilePicture"></div>
+                <div class="menu-button">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                </div>
+            </div>
+                
+
+        </header>
         {% block content %}
         {% endblock content %}
     </section>
