--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -55,14 +55,31 @@ header {
 }
 
 #profilePicture {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     background-image: url('profile-picture.png');
     background-size: cover;
     border-radius: 50%;
     padding: 10px;
 }
 
+.menu-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.dot {
+    width: 5px;
+    height: 10px;
+    background-color: gray;
+    border-radius: 50%;
+    margin-bottom: 5px;
+}
 #profitLoss {
     margin-bottom: 20px;
 }
@@ -147,4 +164,12 @@ header {
     flex-wrap: wrap;
     justify-content: space-between;
     row-gap: 4vh;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 20px;
+    gap: 20px; /* Add space between components */
 }
