changes - changed all "email" keywords in app.py to "username" since the latter will be used - app.py now performs different actions on different pages depending on whether there is a user currently signed in - added styles for the inputs on login and signup, login and signup divs, and their buttons - index.html now only shows the side navigation if there's a user signed in - imported tailwindcss with CDN (very useful) - created login and signup templates

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -148,3 +148,23 @@ header {
     justify-content: space-between;
     row-gap: 4vh;
 }
+input {
+    border: 2px solid gray;
+    padding: 0.25rem !important;
+    border-radius: 8px;
+}
+#logindiv, #signupdiv {
+    gap: 1vh;
+    align-items: flex-start;
+}
+#loginButton {
+    background-color: blue;
+    color: white;
+    padding: 0.5rem 1rem;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+}
