Added edit and delete html and created tabs in the index for them

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,10 +17,12 @@
                 <li data-target="dashboard" class="{{ 'active' if active_page == '/dashboard' else '' }}"><a href="/dashboard">Dashboard</a></li>
                 <li data-target="taxes" class="{{ 'active' if active_page == '/taxes' else '' }}"><a href="/taxes">Taxes</a></li>
                 <li data-target="insights" class="{{ 'active' if active_page == '/insights' else '' }}"><a href="/insights">Insights</a></li>
+                <li data-target="edit" class="{{ 'active' if active_page == '/edit' else '' }}"><a href="/edit">Edit</a></li>
+                <li data-target="delete" class="{{ 'active' if active_page == '/delete' else '' }}"><a href="/delete">Delete</a></li>
             </ul>
         </nav>
     </aside>
-    
+
     <section id="content">
         <header>
             <div>
@@ -37,13 +39,13 @@
                     <div class="dot"></div>
                 </div>
             </div>
-                
+
 
         </header>
         {% block content %}
         {% endblock content %}
     </section>
-    
+
 </body>
 </html>
 
