finished auth - removed unnecessary imports in app.py - secret key added to app as well as mongo config - mongo variable in app.py makes database accessible throughout file - modifications made to User class and load_user function in order to ensure functional authentication experience - logout in app.py also now functional - app now ensures that usernames are unique, and that someone cannot sign up with  a duplicate username - flexbox added to "aside" tag - login and signup divs replaced as forms for functionality

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,6 +12,9 @@ aside {
     padding: 20px;
     width: 200px;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 aside h1 {
