--- a/templates/login.html
+++ b/templates/login.html
@@ -4,12 +4,12 @@
 <header>
     <h2>Login</h2>
 </header>
-<div id="logindiv" class="flex flex-col items-center justify-start">
-    <input type="text" id="username" placeholder="Username">
-    <input type="password" id="password" placeholder="Password">
-    <button id="loginButton">Login</button>
+<form id="logindiv" class="flex flex-col items-center justify-start" method="post" action="/login">
+    <input type="text" id="username" placeholder="Username" name="username">
+    <input type="password" id="password" placeholder="Password" name="password">
+    <button id="loginButton" type="submit">Login</button>
     <a href="/signup" class="underline text-[dimgray]">
         Don't have an account? Sign up here.
     </a>
-</div>
+</form>
 {% endblock content %}
