--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,13 +4,12 @@
 <header>
     <h2>Sign Up</h2>
 </header>
-<div id="signupdiv" class="flex flex-col items-center justify-start">
-    <input type="text" id="username" placeholder="Username">
-    <input type="password" id="password1" placeholder="Password">
-    <input type="password" id="password2" placeholder="Confirm Password">
-    <button id="loginButton">Sign Up</button>
+<form id="signupdiv" class="flex flex-col items-center justify-start" method="post" action="/signup">
+    <input type="text" id="username" placeholder="Username" name="username">
+    <input type="password" id="password" placeholder="Password" name="password">
+    <button id="loginButton" type="submit">Sign Up</button>
     <a href="/login" class="underline text-[dimgray]">
         Already have an account? Log in here.
     </a>
-</div>
+</form>
 {% endblock content %}
