--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,11 @@
                     <li data-target="dashboard" class="{{ 'active' if active_page == '/dashboard' else '' }}"><a href="/dashboard">Dashboard</a></li>
                     <li data-target="taxes" class="{{ 'active' if active_page == '/taxes' else '' }}"><a href="/taxes">Taxes</a></li>
                     <li data-target="insights" class="{{ 'active' if active_page == '/insights' else '' }}"><a href="/insights">Insights</a></li>
+                    <li data-target="edit" class="{{ 'active' if active_page == '/edit' else '' }}"><a href="/edit">Edit</a></li>
+                    <li data-target="delete" class="{{ 'active' if active_page == '/delete' else '' }}"><a href="/delete">Delete</a></li>
+                    <li data-target="search" class="{{ 'active' if active_page == '/search' else '' }}"><a href="/search">Search</a></li>
+
+
                 </ul>
                 {% endif %}
             </nav>
