--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
                     <li data-target="edit" class="{{ 'active' if active_page == '/edit' else '' }}"><a href="/edit">Edit</a></li>
                     <li data-target="delete" class="{{ 'active' if active_page == '/delete' else '' }}"><a href="/delete">Delete</a></li>
                     <li data-target="search" class="{{ 'active' if active_page == '/search' else '' }}"><a href="/search">Search</a></li>
+                    <li data-target="view_db" class="{{ 'view_db' if active_page == '/view_db' else '' }}"><a href="/view_db">View</a></li>
 
 
                 </ul>
