--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@
     </aside>
     
     <section id="content">
+        {% if current_user.is_authenticated %}
         <header>
             <div>
                 <h2 style="margin: 0;">{{section}}</h2>
@@ -53,9 +54,8 @@
                     <div class="dot"></div>
                 </div>
             </div>
-                
-
         </header>
+        {% endif %}
         {% block content %}
         {% endblock content %}
     </section>
