--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,35 +2,34 @@
 
 {% block content %}
 <div id="dashboardSection">
-    <div id="profitLoss">
-        <h3>P/L: $1000</h3>
-        <p>+ $30 (3.09%)</p>
-    </div>
     <div id="graphContainer">
         <p>Graph image placeholder</p>
         <!-- Placeholder for graph image. Replace with actual image or graph drawing logic -->
     </div>
-    <div id="timeFilters">
-        <span>1D</span>
-        <span>1W</span>
-        <span>1M</span>
-        <span>3M</span>
-        <span>YTD</span>
-        <span>1Y</span>
-        <span>ALL</span>
-    </div>
-    <div class="infoSection">
-        <h4>Current Positions &gt;</h4>
-        <div class="infoContent">
-            <p>Portfolio details placeholder</p>
-            <!-- Placeholder for portfolio details. Replace with actual content -->
+    <div id="dashboardinfo" class="flex flex-row">
+        <div class="infoSection">
+            <h4>Current Positions &gt;</h4>
+            <div class="infoContent">
+                <!-- Placeholder for portfolio details. Replace with actual content -->
+                <table id="portfolioTable">
+                    <tr>
+                        <th>Symbol</th>
+                        <th>Quantity</th>
+                    </tr>
+                    {% for trade in grouptrades %}
+                    <tr>
+                        <td>{{ trade._id }}</td>
+                        <td>{{ trade.netQuantity }}</td>
+                    </tr>
+                    {% endfor %}
+                </table>
+            </div>
         </div>
-    </div>
-    <div class="infoSection">
-        <h4>Orders &gt;</h4>
-        <div class="infoContent">
-            <p>Order details placeholder</p>
-            <!-- Placeholder for order details. Replace with actual content -->
+        <div class="infoSection">
+            <h4>Orders &gt;</h4>
+            <div class="infoContent">
+                <p>Please connect via api to get open order data (Coming Soon)</p>
+            </div>
         </div>
     </div>
 </div>
