--- a/templates/taxes.html
+++ b/templates/taxes.html
@@ -3,38 +3,38 @@
 {% block content %}
 
 <div id="taxesSection">
-    <div id="profitLoss">
-        <h3>P/L: $1000</h3>
-        <p>+ $30 (3.09%)</p>
-    </div>
     <div id="graphContainer">
         <p>graph image</p>
     </div>
-    <div id="timeFilters">
-        <span>1D</span>
-        <span>1W</span>
-        <span>1M</span>
-        <span>3M</span>
-        <span>YTD</span>
-        <span>1Y</span>
-        <span>ALL</span>
-    </div>
-    <div class="infoSection">
-        <h4>P&L By Token</h4>
-        <div class="infoContent">
-            <p>Portfolio details</p>
+    <div class="flex flex-row justify-between">
+        <div class="infoSection">
+            <h4>P&L By Token</h4>
+            <div class="infoContent">
+                <table id="taxesTable">
+                    <tr>
+                        <th>Symbol</th>
+                        <th>Profit/Loss</th>
+                    </tr>
+                    {% for trade in grouptrades %}
+                    <tr>
+                        <td>{{ trade._id }}</td>
+                        <td>${{ trade.profit }}</td>
+                    </tr>
+                    {% endfor %}
+                </table>
+            </div>
         </div>
-    </div>
-    <div class="infoSection">
-        <h4>Cost basis per token</h4>
-        <div class="infoContent">
-            <p>Token details</p>
+        <div class="infoSection">
+            <h4>Cost basis per token</h4>
+            <div class="infoContent">
+                <p>Token details</p>
+            </div>
         </div>
-    </div>
-    <div class="infoSection">
-        <h4>Proceeds per token</h4>
-        <div class="infoContent">
-            <p>Token details</p>
+        <div class="infoSection">
+            <h4>Proceeds per token</h4>
+            <div class="infoContent">
+                <p>Token details</p>
+            </div>
         </div>
     </div>
 </div>
