--- a/templates/index.html
+++ b/templates/index.html
@@ -40,20 +40,16 @@
     
     <section id="content">
         {% if current_user.is_authenticated %}
-        <header>
-            <div>
-                <h2 style="margin: 0;">{{section}}</h2>
-            </div>
-            <div class="container">
-                <a href="/upload">
-                    <button id="uploadDataButton">Upload Data</button>
+        <header class="flex justify-between items-center py-4">
+            <h2 class="text-2xl font-bold">{{ section }}</h2>
+            <div class="flex items-center gap-4">
+                <a href="/upload" class="bg-blue-500 text-white py-1 px-3 rounded hover:bg-blue-700 transition duration-300 text-sm">
+                    Upload Data
                 </a>
-                <div id="profilePicture"></div>
-                <div class="menu-button">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
+                <div id="profilePicture" class="inline-block h-10 w-10 rounded-full"></div>
+                <button id="menuButton" class="flex items-center px-3 py-2 border rounded text-green-200 border-green-400 hover:text-green-500 hover:border-green-500">
+                    <svg class="fill-current h-4 w-4" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+                </button>
             </div>
         </header>
         {% endif %}
