--- a/templates/taxes.html
+++ b/templates/taxes.html
@@ -8,6 +8,40 @@
     </div>
     <div class="flex flex-row justify-between">
         <div class="infoSection">
+            <h4>Cost basis per token</h4>
+            <div class="infoContent">
+                <table id="taxesTable">
+                    <tr>
+                        <th>Symbol</th>
+                        <th>Total Purchase Value</th>
+                    </tr>
+                    {% for trade in grouptrades %}
+                    <tr>
+                        <td>{{ trade._id }}</td>
+                        <td>{% if trade.costBasis|float < 0 %}-{% endif %}${{ trade.costBasis|replace(",", "")|float|abs }}</td>
+                    </tr>
+                    {% endfor %}
+                </table>
+            </div>
+        </div>
+        <div class="infoSection">
+            <h4>Proceeds per token</h4>
+            <div class="infoContent">
+                <table id="taxesTable">
+                    <tr>
+                        <th>Symbol</th>
+                        <th>Total Sale Value</th>
+                    </tr>
+                    {% for trade in grouptrades %}
+                    <tr>
+                        <td>{{ trade._id }}</td>
+                        <td>{% if trade.proceeds|float < 0 %}-{% endif %}${{ trade.proceeds|replace(",", "")|float|abs }}</td>
+                    </tr>
+                    {% endfor %}
+                </table>
+            </div>
+        </div>
+        <div class="infoSection">
             <h4>P&L By Token</h4>
             <div class="infoContent">
                 <table id="taxesTable">
@@ -18,22 +52,10 @@
                     {% for trade in grouptrades %}
                     <tr>
                         <td>{{ trade._id }}</td>
-                        <td>${{ trade.profit }}</td>
+                        <td>{% if trade.profit|float < 0 %}-{% endif %}${{ trade.profit|replace(",", "")|float|abs }}</td>
                     </tr>
                     {% endfor %}
                 </table>
-            </div>
-        </div>
-        <div class="infoSection">
-            <h4>Cost basis per token</h4>
-            <div class="infoContent">
-                <p>Token details</p>
-            </div>
-        </div>
-        <div class="infoSection">
-            <h4>Proceeds per token</h4>
-            <div class="infoContent">
-                <p>Token details</p>
             </div>
         </div>
     </div>
